Changed colors from looking too garish on each section

--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ header, main {
 }
 
 #zelda-part {
-    background-color: gold;
+    background-color: black;
     border: 4px solid skyblue;
     padding: 80px;
     margin: 30px 100px;
@@ -32,8 +32,8 @@ header, main {
 }
 
 #pixel-part {
-    background-color:deepskyblue;
-    border: 4px solid darkblue;
+    background-color:black;
+    border: 4px solid rgb(123, 194, 218);
     padding: 80px;
     margin: 30px 100px;
 }
@@ -44,7 +44,7 @@ header, main {
 }
 
 #nine-part {
-    background-color: burlywood;
+    background-color: black;
     border: 4px solid brown;
     padding: 80px;
     margin: 30px 100px;
@@ -56,8 +56,8 @@ header, main {
 }
 
 #theatre-part {
-    background-color: blue;
-    border: 4px solid red;
+    background-color: black;
+    border: 4px solid rgb(41, 41, 224);
     padding: 80px;
     margin: 30px 100px;
 }
@@ -68,8 +68,8 @@ header, main {
 }
 
 #overwatch-part {
-    background-color: rgb(72, 19, 122);
-    border: 4px solid orange;
+    background-color: black;
+    border: 4px solid rgb(89, 23, 144);
     padding: 80px;
     margin: 30px 100px;
 }
@@ -85,12 +85,12 @@ header, main {
 }
 
 .image-border {
-    border: 5px goldenrod;
+    border: 5px goldenrod solid;
 }
 
 footer {
     font-size: 0.8rem;
-    background-color: blue;
+    background-color: black;
     text-align: center;
     width: 100%;
     padding: 10 px 20px;
