--- a/styles.css
+++ b/styles.css
@@ -4,10 +4,7 @@ html {
 }
 
 body {
-    margin-top: 8px;
-    margin-bottom: 8px;
-    margin-right: 8px;
-    margin-left: 8px;
+    margin: 8px;
     display: block;
     background-color: black;
 }
